<?xml version="1.0"?>
<package format="3">
  <name>courier_arm</name>
  <version>0.1.0</version>
  <description>Elevator button pressing and delivery arm nodes for capstone project</description>
  <maintainer email="dmlgud0777@gmail.com">sejong</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
